--- a/frontend/src/app/components/pages/home/home.component.css
+++ b/frontend/src/app/components/pages/home/home.component.css
@@ -88,3 +88,8 @@ li a img{
   margin-top: 0.7rem;
   font-size: 1.1rem;
 }
+.pag{
+  display: flex;
+  justify-content: center;
+  font-size: large;
+}
